  classes correctly.
- You must specify target_dead 1 to use a skill on a dead person.
  This will prevent any problems where the bot keeps trying to use a skill
  like Heal or Blessing on someone who is dead.
- You can now attack looters even if the are normally ignored
  set attackLooters to 1 in config.txt
- 'cart add' and 'cart get' commands now accept names.

New config options:
- partySkill: target_dist (range)
  This is the same as target_dist for attackSkillSlot.
  Only use the skill if the player is in the given range.
- partySkill: isSelfSkill (flag)
  Use this skill on yourself after checking the party conditions.
  Useful for Magnificat or Gloria.
- cachePlayerNames (flag)
    Turns player name caching on or off.

  cachePlayerNames_duration (seconds)
    Cache player names for a maximum time of (seconds). The default is
    900 seconds (15 minutes).

  cachePlayerNames_maxSize (number)
    Maximum cache size. The default is 100.
- storageAuto_keepOpen (flag)
  Set to true if you want to keep storage open after storageAuto sequence.
  Only enable this if you know what you're doing.
  (Note: You cannot use items while storage is open.)
- itemsTakeAuto_new (flag)
  Activates experimental new item taking code; might work better for
  archers who keep failing to take items.
- "s" sequence for NPC talk steps; the client sends this when you click
  "Sell" at a shop NPC.
- attackLooters (flag)
  Enables Looter attack. (Warning attacks all monsters.).
  Will only attack if item_pickup is not 0

Internal:
- Obsolete getActorHash() function removed (use Actor::get() instead).
- The format of $npcs_lut has changed, IDs are completely abandoned.
- Attack AI routines should now support players as well.
- New Match::cartItem() function, similar to Match::inventoryItem().

Credits:
- doenet: chatLangCode bugfixes.


==================
### 1.6.2
==================

*** INCOMPATIBLE CHANGES ***:
- Items named e.g. "Unknown 1234" are now called "Unknown #1234" so that